# CMakeExamples

./: README.md
example1/: CMakeLists.txt  main.cpp
example2/: CMakeLists.txt  func.cpp  func.h  main.cpp
example3/: CMakeLists.txt
example3/libmath/: CMakeLists.txt
example3/libmath/include/math/: common.h  vec.hpp
example3/src/: main.cpp
example4/libmath/: CMakeLists.txt
example4/libmath/src/math/: common.cpp
example5/: CMakeLists.txt
example5/libmath/: CMakeLists.txt
example5/libmath/tests/: vec_tests.cpp
